# envedit

./: Cargo.toml  LICENSE.txt  README.md  build.rs
.github/workflows/: release.yml
note/: 01.opv.md  README.md
src/: config.rs  confz.rs  docz.rs  error.rs  main.rs
